exec(String) to ProcessBuilder